fix: readme.txt

--- a/client/src/touchtype/package.json
+++ b/client/src/touchtype/package.json
@@ -1,6 +1,7 @@
 {
   "name": "touchtype",
   "version": "0.1.0",
+  "author": "ocelotdive",
   "private": true,
   "homepage": ":",
   "dependencies": {
